# voice_bot

voice-bot-backend/: .env.example  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
voice-bot-backend/.github/workflows/: ebs_deploy.yaml
voice-bot-backend/affiliate/: api.py  models.py  schemas.py
voice-bot-backend/affiliate/migrations/: 0001_initial.py
voice-bot-backend/authentication/: admin.py  api.py  auth_controllers.py  models.py  schemas.py  utils.py
voice-bot-backend/authentication/migrations/: 0001_initial.py  0002_user_reffered_by.py  0003_newapikey.py  0004_rename_newapikey_userapikey_and_more.py  0005_apikey_delete_userapikey.py  0006_apikey_updated_on_alter_apikey_created_on.py
voice-bot-backend/authentication/social_auth/: base.py  google.py
voice-bot-backend/blog/: admin.py  api.py  models.py  schemas.py  urls.py  utils.py  views.py
voice-bot-backend/blog/migrations/: 0001_initial.py  0002_category_created_on_category_updated_on_and_more.py
voice-bot-backend/chat/: admin.py  api.py  models.py  schemas.py
voice-bot-backend/chat/migrations/: 0001_initial.py  0002_chatlimit.py
voice-bot-backend/communication/: admin.py  api.py  models.py  schemas.py  utils.py
voice-bot-backend/docs/: Todo.md
voice-bot-backend/docs/setup/: auth.md  (+3 more)
voice-bot-backend/payments/: admin.py  api.py  models.py  schemas.py  utils.py
voice-bot-backend/thedevstarter_backend/: api.py  asgi.py  settings.py  urls.py  wsgi.py
voice-bot-backend/utils/: AsyncClient.py  common.py  ds_logger.py
(+149 files in other folders)
